--- a/pug/about-service.pug
+++ b/pug/about-service.pug
@@ -90,7 +90,8 @@ html
 				.question-tabs-cotnainer.main-grid
 					each val in ["","","",""]
 						.tc-item
-							| Разработка функционала для проведение онлайн-мероприятий 
+							.tc-inner
+								| Разработка функционала для проведение онлайн-мероприятий 
 				.question-answer-container.main-grid
 					.qa-item.main-grid
 						.qa-person
