--- a/pug/cabinet-news.pug
+++ b/pug/cabinet-news.pug
@@ -17,7 +17,7 @@ html
 				.cabinet-body
 					.cabinet-event 
 						h2 Заголовок размещенной новости в две или несколько строк
-						.cabinet-event-container
+						.cabinet-event-container.cabinet-news-container
 							.ce-head
 								.ce-gallery
 									.gallery-main
@@ -29,7 +29,6 @@ html
 											img(src="../images/1.jpg")
 											img(src="../images/1.jpg")
 											img(src="../images/1.jpg")
-						
 							.ce-body 
 								ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris. Suspendisse felis sem, condimentum ullamcorper est sit amet.ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris. Suspendisse felis sem, condimentum ullamcorper est sit amet. Suspendisse felis sem, condimentum ullamcorper est sit amet. Sed sapien metus, scelerisque nec pharetra id, tempor a tortor. Pellentesque non dignissim neque. Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh, ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id, pharetra odio. Donec bibendum nunc sit amet tortor scelerisque luctus et sit amet mauris. Suspendisse felis sem, condimentum ullamcorper est sit amet. Sed sapien metus, scelerisque nec pharetra id, tempor a tortor. Pellentesque non dignissim neque. Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh.
 				.cabinet-side
