--- a/pug/index.pug
+++ b/pug/index.pug
@@ -208,11 +208,11 @@ html
 							|ул. Улица, д. 99, оф. 212
 						.social
 							a(href="#")
-								img(src="../images/social/i-b-2.svg")
+								i.inst
 							a(href="#")
-								img(src="../images/social/f-b.svg")
+								i.fb
 							a(href="#")
-								img(src="../images/social/v-b-2.svg")
+								i.vk
 						.btn-wrap
 							a.btn.white.shadow(href="#")
 								| Скачать в AppStore
