--- a/pug/contacts-page.pug
+++ b/pug/contacts-page.pug
@@ -32,8 +32,8 @@ html
 						|ул. Улица, д. 99, оф. 212
 					.social
 						a(href="#")
-							img(src="../images/social/i-b-2.svg")
+							i.inst
 						a(href="#")
-							img(src="../images/social/f-b.svg")
+							i.fb
 						a(href="#")
-							img(src="../images/social/v-b-2.svg")
+							i.vk
