--- a/scss/sourse/_cabinet-all.scss
+++ b/scss/sourse/_cabinet-all.scss
@@ -204,6 +204,7 @@
 
 .event-container-cabinet {
   padding: 0;
+  margin: 0 0 60px;
   grid-column-gap: 15px;
 
   .event-item {
@@ -281,6 +282,15 @@
   border-radius: 6px;
   box-shadow: $shadow;
   background: $whiteColor;
+}
+
+.cabinet-news-container {
+  .ce-head {
+    display: block;
+    float: left;
+    width: 60%;
+    margin-right: 15px;
+  }
 }
 
 .ce-head {
@@ -384,7 +394,9 @@
 
 .btn-wc-bottom {
   grid-column: span 12;
-  margin: 30px 0 0;
+  margin: 75px 0 0;
+
+
 
   .btn {
     width: 300px;
