--- a/pug/cabinet-main.pug
+++ b/pug/cabinet-main.pug
@@ -21,21 +21,76 @@ html
 							i +
 							span Создать мероприятие
 					.event-container-cabinet.main-grid
-						each val in ["","","","","",""]
-							.event-item
-								.ei-head
-									.data 
-										i 
-										| 2 Июня 12:30
-									.category-name Категория мероприятия
-								h3 Заголовок размещенного мероприятия в несколько…
-								.description Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.
-								.ei-footer
-									.place 
-										i
-										| Новосибирск
-									.btn-wc
-										a(href="#").btn.orange-border.small Подробнее
+						.event-item
+							.ei-head
+								.data 
+									i 
+									| 2 Июня 12:30
+								.category-name Категория мероприятия
+							h3 Заголовок размещенного мероприятия в несколько… мероприятия в несколько…
+							.description Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.
+							.ei-footer
+								.place 
+									i
+									| Новосибирск
+								.btn-wc
+									a(href="#").btn.orange-border.small Подробнее
+						.event-item
+							.ei-head
+								.data 
+									i 
+									| 2 Июня 12:30
+								.category-name Категория мероприятия
+							h3 Заголовок размещенного 
+							.description Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.
+							.ei-footer
+								.place 
+									i
+									| Новосибирск
+								.btn-wc
+									a(href="#").btn.orange-border.small Подробнее
+						.event-item
+							.ei-head
+								.data 
+									i 
+									| 2 Июня 12:30
+								.category-name Категория мероприятия
+							h3 Заголовок размещенного мероприятия в несколько…
+							.description Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.
+							.ei-footer
+								.place 
+									i
+									| Новосибирск
+								.btn-wc
+									a(href="#").btn.orange-border.small Подробнее
+						.event-item
+							.ei-head
+								.data 
+									i 
+									| 2 Июня 12:30
+								.category-name Категория мероприятия
+							h3 Заголовок размещенного мероприятия в несколько…
+							.description  nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.
+							.ei-footer
+								.place 
+									i
+									| Новосибирск
+								.btn-wc
+									a(href="#").btn.orange-border.small Подробнее
+						.event-item
+							.ei-head
+								.data 
+									i 
+									| 2 Июня 12:30
+								.category-name Категория мероприятия
+							h3 Заголовок размещенного мероприятия в несколько…
+							.description Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.
+							.ei-footer
+								.place 
+									i
+									| Новосибирск
+								.btn-wc
+									a(href="#").btn.orange-border.small Подробнее
 					.subhead-cabinet
 						h2 Ваши новости
 						a.btn.orange.add-element(href="#")  
@@ -44,9 +99,9 @@ html
 					.event-container-cabinet.main-grid
 						each val in ["","","","","",""]
 							.news-item
-								h3 Заголовок размещенной новости в несколько строк
+								h3 Заголовок размещенной новости в несколько строк Заголовок размещенной новости в несколько строк
 								img(src="../images/1.jpg")
-								.description Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh…
+								.description Curabitur lobortis id lorem id bibendum. Ut iCurabitur lobortis id lorem id bibendum. Ut id consectetur magna. d consectetur magna. Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh…
 								.ni-footer
 									.data
 										i
