--- a/css/style.css
+++ b/css/style.css
@@ -1070,6 +1070,7 @@ h2.global span {
 .event-item h3 {
   font-size: 18px;
   margin: 0 0 10px;
+  min-height: 40px;
 }
 .event-item .description {
   position: relative;
