--- a/pug/index.pug
+++ b/pug/index.pug
@@ -47,7 +47,6 @@ html
 			//- .section-phone
 			.section-phone
 				.line-4
-				.move-element.triangle.orange.triangle-6(data-parallaxify-range-x="-50" data-parallaxify-range-y="-20")
 				.move-element.cube.orange.cube-8(data-parallaxify-range-x="-60" data-parallaxify-range-y="-10")
 				.move-element.cube.orange.cube-9(data-parallaxify-range-x="-40" data-parallaxify-range-y="-20")
 				h2.global
@@ -85,22 +84,126 @@ html
 					br
 					| на нашем сервисе
 				.event-container.owl-event.owl-carousel
-					each val in ["Curabitur lobortis id la. Quismet risus.","Curabitur lobortis id lorem id bibendum. Ut id consectet","Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.","Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.","Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.","Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.","Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus."]
-						.event-item
-							.ei-head
-								.data 
-									i 
-									| 2 Июня 12:30
-								.category-name Категория мероприятия
-							h3 Заголовок размещенного мероприятия в несколько…
-							.description 
-								= val
-							.ei-footer
-								.place 
-									i
-									| Новосибирск
-								.btn-wc
-									a(href="#").btn.orange-border.small Подробнее
+					.event-item
+						.ei-head
+							.data 
+								i 
+								| 2 Июня 12:30
+							.category-name Категория мероприятия
+						h3 Заголовок размещенного мероприятия в несколько…
+						.description 
+							| Curabitur lobortis id la. Quismet risus.
+						.ei-footer
+							.place 
+								i
+								| Новосибирск
+							.btn-wc
+								a(href="#").btn.orange-border.small Подробнее
+					.event-item
+						.ei-head
+							.data 
+								i 
+								| 2 Июня 12:30
+							.category-name Категория мероприятия
+						h3 Заголовок разме
+						.description 
+							| Curabitur lobortis id la. Quismet risus. Curabitur lobortis id la. Quismet risus. Curabitur lobortis id la. Quismet risus. 
+						.ei-footer
+							.place 
+								i
+								| Новосибирск
+							.btn-wc
+								a(href="#").btn.orange-border.small Подробнее
+					.event-item
+						.ei-head
+							.data 
+								i 
+								| 2 Июня 12:30
+							.category-name Категория мероприятия
+						h3 Заголовок раз
+						.description 
+							| Curabitur lobortis id la.
+						.ei-footer
+							.place 
+								i
+								| Новосибирск
+							.btn-wc
+								a(href="#").btn.orange-border.small Подробнее
+					.event-item
+						.ei-head
+							.data 
+								i 
+								| 2 Июня 12:30
+							.category-name Категория мероприятия
+						h3 Заголовок размещенного мероприятия в несколько…
+						.description 
+							| Curabitur lobortis 
+						.ei-footer
+							.place 
+								i
+								| Новосибирск
+							.btn-wc
+								a(href="#").btn.orange-border.small Подробнее
+					.event-item
+						.ei-head
+							.data 
+								i 
+								| 2 Июня 12:30
+							.category-name Категория мероприятия
+						h3 Заголовок размещенного мероприятия в несколько…
+						.description 
+							| Curabitur lobortis id la. Quismet risus. Curabitur lobortis id la. Quismet risus. Curabitur lobortis id la. Quismet risus. 
+						.ei-footer
+							.place 
+								i
+								| Новосибирск
+							.btn-wc
+								a(href="#").btn.orange-border.small Подробнее
+					.event-item
+						.ei-head
+							.data 
+								i 
+								| 2 Июня 12:30
+							.category-name Категория мероприятия
+						h3 Заголовок размещенного мероприятия в несколько…
+						.description 
+							| Curabitur lobortis id
+						.ei-footer
+							.place 
+								i
+								| Новосибирск
+							.btn-wc
+								a(href="#").btn.orange-border.small Подробнее
+					.event-item
+						.ei-head
+							.data 
+								i 
+								| 2 Июня 12:30
+							.category-name Категория мероприятия
+						h3 Заголовок размещенного мероприятия в несколько…
+						.description 
+							| Curabitur lobortis id la. Quismet risus. Curabitur lobortis id la. Quismet risus. Curabitur lobortis id la. Quismet risus. 
+						.ei-footer
+							.place 
+								i
+								| Новосибирск
+							.btn-wc
+								a(href="#").btn.orange-border.small Подробнее
+					.event-item
+						.ei-head
+							.data 
+								i 
+								| 2 Июня 12:30
+							.category-name Категория мероприятия
+						h3 Заголовок размещенного мероприятия в несколько…
+						.description 
+							| Curabitur lobortis id la. Quismet risus. Curabitur lobortis id la. Quismet risus. Curabitur lobortis id la. Quismet risus. 
+						.ei-footer
+							.place 
+								i
+								| Новосибирск
+							.btn-wc
+								a(href="#").btn.orange-border.small Подробнее
 					.nav-container
 						.nav.nav-prev
 						.nav.nav-next
@@ -177,7 +280,7 @@ html
 						span Надзаголовок
 						| Возможности для организаторов
 					.main-grid
-						.slider.owl-carousel.slider-owl
+						.slider.owl-carousel.slider-owl.owl-page
 							each val in ["","",""]
 								.item
 									h3 Структурированное представление мероприятий
