--- a/css/style.css
+++ b/css/style.css
@@ -1399,7 +1399,7 @@ h2.global span {
 }
 
 .line-1 {
-  width: 560px;
+  width: 30%;
   height: 280px;
   left: 0;
   top: 0;
@@ -1410,21 +1410,21 @@ h2.global span {
   background-repeat: no-repeat;
   background-size: contain;
   background-image: url("../images/line-1.png");
+  background-position: right top;
 }
 
 .line-2 {
-  width: 1450px;
-  height: 807px;
-  right: 50%;
+  width: 100%;
+  height: 860px;
+  right: 0%;
   top: 0;
   position: absolute;
   display: block;
   z-index: auto;
-  background-position: right top;
+  background-position: bottom;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   background-image: url("../images/line-2.png");
-  margin-right: -960px;
 }
 
 .line-3 {
@@ -1988,7 +1988,7 @@ h2.global span {
 .cabinet-news-container .ce-head {
   display: block;
   float: left;
-  width: 60%;
+  width: 600px;
   margin-right: 15px;
 }
 
@@ -2000,6 +2000,7 @@ h2.global span {
 
 .ce-gallery {
   grid-column: span 6;
+  width: 600px;
 }
 
 .ce-info {
