--- a/scss/sourse/_cabinet-all.scss
+++ b/scss/sourse/_cabinet-all.scss
@@ -288,7 +288,7 @@
   .ce-head {
     display: block;
     float: left;
-    width: 60%;
+    width: 600px;
     margin-right: 15px;
   }
 }
@@ -301,6 +301,7 @@
 
 .ce-gallery {
   grid-column: span 6;
+  width: 600px;
 }
 
 .ce-info {
